--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     container_name: bitcointracker_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: bitcointracker
+      MYSQL_ROOT_PASSWORD: yourpassword
+      MYSQL_DATABASE: database
     ports:
       - "3307:3306"
     healthcheck:
